v1.0.0/modules/schema/pages/class/SynchronousMachineEquivalentCircuit.adoc
= `SynchronousMachineEquivalentCircuit`
:toclevels: 4


+++The electrical equations for all variations of the synchronous models are based on the SynchronousEquivalentCircuit diagram for the direct- and quadrature- axes.
Equations for conversion between equivalent circuit and time constant reactance forms:
<i>Xd</i> = <i>Xad </i>+<i> Xl</i>
<i>X’d</i> = <i>Xl</i> + <i>Xad</i> x <i>Xfd</i> / (<i>Xad</i> + <i>Xfd</i>)
<i>X”d</i> = <i>Xl</i> + <i>Xad</i> x <i>Xfd</i> x <i>X1d</i> / (<i>Xad</i> x <i>Xfd</i> + <i>Xad</i> x <i>X1d</i> + <i>Xfd</i> x <i>X1d</i>)
<i>Xq</i> = <i>Xaq</i> + <i>Xl</i>
<i>X’q</i> = <i>Xl</i> + <i>Xaq</i> x <i>X1q</i> / (<i>Xaq</i> + <i>X1q</i>)
<i>X”q</i> = <i>Xl</i> + <i>Xaq</i> x <i>X1q</i> x <i>X2q</i> / (<i>Xaq</i> x <i>X1q</i> + <i>Xaq</i> x <i>X2q</i> + <i>X1q</i> x <i>X2q</i>)
<i>T’do</i> = (<i>Xad</i> + <i>Xfd</i>) / (<i>omega</i><i><sub>0</sub></i> x <i>Rfd</i>)
<i>T”do</i> = (<i>Xad</i> x <i>Xfd</i> + <i>Xad</i> x <i>X1d</i> + <i>Xfd</i> x <i>X1d</i>) / (<i>omega</i><i><sub>0</sub></i> x <i>R1d</i> x (<i>Xad</i> + <i>Xfd</i>)
<i>T’qo</i> = (<i>Xaq</i> + <i>X1q</i>) / (<i>omega</i><i><sub>0</sub></i> x <i>R1q</i>)
<i>T”qo</i> = (<i>Xaq</i> x <i>X1q</i> + <i>Xaq</i> x <i>X2q</i> + <i>X1q</i> x <i>X2q</i>) / (<i>omega</i><i><sub>0</sub></i> x <i>R2q</i> x (<i>Xaq</i> + <i>X1q</i>)
Same equations using CIM attributes from SynchronousMachineTimeConstantReactance class on left of "=" and SynchronousMachineEquivalentCircuit class on right (except as noted):
xDirectSync = xad + RotatingMachineDynamics.statorLeakageReactance
xDirectTrans = RotatingMachineDynamics.statorLeakageReactance + xad x xfd / (xad + xfd)
xDirectSubtrans = RotatingMachineDynamics.statorLeakageReactance + xad x xfd x x1d / (xad x xfd + xad x x1d + xfd x x1d)
xQuadSync = xaq + RotatingMachineDynamics.statorLeakageReactance
xQuadTrans = RotatingMachineDynamics.statorLeakageReactance + xaq x x1q / (xaq+ x1q)
xQuadSubtrans = RotatingMachineDynamics.statorLeakageReactance + xaq x x1q x x2q / (xaq x x1q + xaq x x2q + x1q x x2q) 
tpdo = (xad + xfd) / (2 x pi x nominal frequency x rfd)
tppdo = (xad x xfd + xad x x1d + xfd x x1d) / (2 x pi x nominal frequency x r1d x (xad + xfd)
tpqo = (xaq + x1q) / (2 x pi x nominal frequency x r1q)
tppqo = (xaq x x1q + xaq x x2q + x1q x x2q) / (2 x pi x nominal frequency x r2q x (xaq + x1q)
These are only valid for a simplified model where "Canay" reactance is zero.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SynchronousMachineEquivalentCircuit`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]
**** xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
***** xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]
****** *`SynchronousMachineEquivalentCircuit`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
SynchronousMachineEquivalentCircuit {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}

























SynchronousMachine {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineGovernorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



GenICompensationForGenJ {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ExcitationSystemDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CrossCompoundTurbineGovernorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CrossCompoundTurbineGovernorDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



MechanicalLoadDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}









DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}















SynchronousMachineEquivalentCircuit -> SynchronousMachine: SynchronousMachine


SynchronousMachineEquivalentCircuit -> TurbineGovernorDynamics: TurbineGovernorDynamics


SynchronousMachineEquivalentCircuit -> GenICompensationForGenJ: GenICompensationForGenJ


SynchronousMachineEquivalentCircuit -> ExcitationSystemDynamics: ExcitationSystemDynamics


SynchronousMachineEquivalentCircuit -> CrossCompoundTurbineGovernorDynamics: CrossCompoundTurbineGovernorDynamics


SynchronousMachineEquivalentCircuit -> CrossCompoundTurbineGovernorDynamics: CrossCompoundTurbineGovernorDyanmics


SynchronousMachineEquivalentCircuit -> MechanicalLoadDynamics: MechanicalLoadDynamics





SynchronousMachineEquivalentCircuit -> DiagramObject: DiagramObjects


SynchronousMachineEquivalentCircuit -> InstanceSet: InstanceSet


SynchronousMachineEquivalentCircuit -> Name: Names


SynchronousMachineEquivalentCircuit -> ChangeSetMember: PropertiesCIMDataObject


SynchronousMachineEquivalentCircuit -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<SynchronousMachine,`SynchronousMachine`>>
| 1
| xref::class/SynchronousMachine.adoc[`SynchronousMachine`]
| +++Synchronous machine to which synchronous machine dynamics model applies.+++

| <<r1d,`r1d`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Direct-axis damper 1 winding resistance.+++

| <<r1q,`r1q`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Quadrature-axis damper 1 winding resistance.+++

| <<r2q,`r2q`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Quadrature-axis damper 2 winding resistance.+++

| <<rfd,`rfd`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Field winding resistance.+++

| <<x1d,`x1d`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Direct-axis damper 1 winding leakage reactance.+++

| <<x1q,`x1q`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Quadrature-axis damper 1 winding leakage reactance.+++

| <<x2q,`x2q`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Quadrature-axis damper 2 winding leakage reactance.+++

| <<xad,`xad`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Direct-axis mutual reactance.+++

| <<xaq,`xaq`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Quadrature-axis mutual reactance.+++

| <<xf1d,`xf1d`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Differential mutual (“Canay”) reactance.+++

| <<xfd,`xfd`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Field winding leakage reactance.+++

| <<CrossCompoundTurbineGovernorDyanmics,`CrossCompoundTurbineGovernorDyanmics`>>
| 0..1
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]
| +++The cross-compound turbine governor with which this high-pressure synchronous machine is associated.+++

| <<CrossCompoundTurbineGovernorDynamics,`CrossCompoundTurbineGovernorDynamics`>>
| 0..1
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]
| +++The cross-compound turbine governor with which this low-pressure synchronous machine is associated.+++

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 0..1
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model associated with this synchronous machine model.+++

| <<MechanicalLoadDynamics,`MechanicalLoadDynamics`>>
| 0..1
| xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`]
| +++Mechanical load model associated with this synchronous machine model.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<damping,`damping`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Damping torque coefficient (<i>D</i>) (&gt;= 0).  A proportionality constant that, when multiplied by the angular velocity of the rotor poles with respect to the magnetic field (frequency), results in the damping torque.  This value is often zero when the sources of damping torques (generator damper windings, load damping effects, etc.) are modelled in detail.  Typical value = 0.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<efdBaseRatio,`efdBaseRatio`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Ratio (exciter voltage/generator voltage) of <i>Efd</i> bases of exciter and generator models (&gt; 0). Typical value = 1.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<ifdBaseType,`ifdBaseType`>>
| 0..1
| xref::enumeration/IfdBaseKind.adoc[`IfdBaseKind`]
| +++Excitation base system mode. It should be equal to the value of <i>WLMDV</i> given by the user. <i>WLMDV</i> is the PU ratio between the field voltage and the excitation current: <i>Efd</i> = <i>WLMDV</i> x <i>Ifd</i>. Typical value = ifag.+++

| <<inertia,`inertia`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Inertia constant of generator or motor and mechanical load (<i>H</i>) (&gt; 0).  This is the specification for the stored energy in the rotating mass when operating at rated speed.  For a generator, this includes the generator plus all other elements (turbine, exciter) on the same shaft and has units of MW x s.  For a motor, it includes the motor plus its mechanical load. Conventional units are PU on the generator MVA base, usually expressed as MW x s / MVA or just s. This value is used in the accelerating power reference frame for operator training simulator solutions.  Typical value = 3.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<saturationFactor,`saturationFactor`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Saturation factor at rated terminal voltage (<i>S1</i>) (&gt;= 0).  Not used by simplified model.  Defined by defined by <i>S</i>(<i>E1</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,02.+++

| <<saturationFactor120,`saturationFactor120`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Saturation factor at 120% of rated terminal voltage (<i>S12</i>) (&gt;= RotatingMachineDynamics.saturationFactor). Not used by the simplified model, defined by <i>S</i>(<i>E2</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,12.+++

| <<saturationFactor120QAxis,`saturationFactor120QAxis`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Quadrature-axis saturation factor at 120% of rated terminal voltage (<i>S12q</i>) (&gt;= SynchonousMachineDetailed.saturationFactorQAxis).  Typical value = 0,12.+++

| <<saturationFactorQAxis,`saturationFactorQAxis`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Quadrature-axis saturation factor at rated terminal voltage (<i>S1q</i>) (&gt;= 0). Typical value = 0,02.+++

| <<statorLeakageReactance,`statorLeakageReactance`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Stator leakage reactance (<i>Xl</i>) (&gt;= 0). Typical value = 0,15.+++

| <<statorResistance,`statorResistance`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Stator (armature) resistance (<i>Rs</i>) (&gt;= 0). Typical value = 0,005.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<GenICompensationForGenJ,`GenICompensationForGenJ`>>
| 0..*
| xref::class/GenICompensationForGenJ.adoc[`GenICompensationForGenJ`]
| +++Compensation of voltage compensator's generator for current flow out of this  generator.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<TurbineGovernorDynamics,`TurbineGovernorDynamics`>>
| 0..*
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
| +++Turbine-governor model associated with this synchronous machine model. Multiplicity of greater than one is intended to support hydro units that have multiple turbines on one generator.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#CrossCompoundTurbineGovernorDyanmics]
=== `CrossCompoundTurbineGovernorDyanmics`
+++The cross-compound turbine governor with which this high-pressure synchronous machine is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.CrossCompoundTurbineGovernorDyanmics`
| Cardinality
| 0..1
| Type
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

//[discrete]
[#CrossCompoundTurbineGovernorDynamics]
=== `CrossCompoundTurbineGovernorDynamics`
+++The cross-compound turbine governor with which this low-pressure synchronous machine is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.CrossCompoundTurbineGovernorDynamics`
| Cardinality
| 0..1
| Type
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

//[discrete]
[#damping]
=== `damping`
+++Damping torque coefficient (<i>D</i>) (&gt;= 0).  A proportionality constant that, when multiplied by the angular velocity of the rotor poles with respect to the magnetic field (frequency), results in the damping torque.  This value is often zero when the sources of damping torques (generator damper windings, load damping effects, etc.) are modelled in detail.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.damping`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#efdBaseRatio]
=== `efdBaseRatio`
+++Ratio (exciter voltage/generator voltage) of <i>Efd</i> bases of exciter and generator models (&gt; 0). Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDetailed.efdBaseRatio`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model associated with this synchronous machine model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.ExcitationSystemDynamics`
| Cardinality
| 0..1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

//[discrete]
[#GenICompensationForGenJ]
=== `GenICompensationForGenJ`
+++Compensation of voltage compensator's generator for current flow out of this  generator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.GenICompensationForGenJ`
| Cardinality
| 0..*
| Type
| xref::class/GenICompensationForGenJ.adoc[`GenICompensationForGenJ`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

//[discrete]
[#ifdBaseType]
=== `ifdBaseType`
+++Excitation base system mode. It should be equal to the value of <i>WLMDV</i> given by the user. <i>WLMDV</i> is the PU ratio between the field voltage and the excitation current: <i>Efd</i> = <i>WLMDV</i> x <i>Ifd</i>. Typical value = ifag.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDetailed.ifdBaseType`
| Cardinality
| 0..1
| Type
| xref::enumeration/IfdBaseKind.adoc[`IfdBaseKind`]

| Inherited from
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]


|===

//[discrete]
[#inertia]
=== `inertia`
+++Inertia constant of generator or motor and mechanical load (<i>H</i>) (&gt; 0).  This is the specification for the stored energy in the rotating mass when operating at rated speed.  For a generator, this includes the generator plus all other elements (turbine, exciter) on the same shaft and has units of MW x s.  For a motor, it includes the motor plus its mechanical load. Conventional units are PU on the generator MVA base, usually expressed as MW x s / MVA or just s. This value is used in the accelerating power reference frame for operator training simulator solutions.  Typical value = 3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.inertia`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#MechanicalLoadDynamics]
=== `MechanicalLoadDynamics`
+++Mechanical load model associated with this synchronous machine model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.MechanicalLoadDynamics`
| Cardinality
| 0..1
| Type
| xref::class/MechanicalLoadDynamics.adoc[`MechanicalLoadDynamics`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#r1d]
=== `r1d`
+++Direct-axis damper 1 winding resistance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.r1d`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#r1q]
=== `r1q`
+++Quadrature-axis damper 1 winding resistance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.r1q`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#r2q]
=== `r2q`
+++Quadrature-axis damper 2 winding resistance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.r2q`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#rfd]
=== `rfd`
+++Field winding resistance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.rfd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#saturationFactor]
=== `saturationFactor`
+++Saturation factor at rated terminal voltage (<i>S1</i>) (&gt;= 0).  Not used by simplified model.  Defined by defined by <i>S</i>(<i>E1</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,02.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.saturationFactor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#saturationFactor120]
=== `saturationFactor120`
+++Saturation factor at 120% of rated terminal voltage (<i>S12</i>) (&gt;= RotatingMachineDynamics.saturationFactor). Not used by the simplified model, defined by <i>S</i>(<i>E2</i>) in the SynchronousMachineSaturationParameters diagram.  Typical value = 0,12.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.saturationFactor120`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#saturationFactor120QAxis]
=== `saturationFactor120QAxis`
+++Quadrature-axis saturation factor at 120% of rated terminal voltage (<i>S12q</i>) (&gt;= SynchonousMachineDetailed.saturationFactorQAxis).  Typical value = 0,12.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDetailed.saturationFactor120QAxis`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]


|===

//[discrete]
[#saturationFactorQAxis]
=== `saturationFactorQAxis`
+++Quadrature-axis saturation factor at rated terminal voltage (<i>S1q</i>) (&gt;= 0). Typical value = 0,02.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDetailed.saturationFactorQAxis`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/SynchronousMachineDetailed.adoc[`SynchronousMachineDetailed`]


|===

//[discrete]
[#statorLeakageReactance]
=== `statorLeakageReactance`
+++Stator leakage reactance (<i>Xl</i>) (&gt;= 0). Typical value = 0,15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.statorLeakageReactance`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#statorResistance]
=== `statorResistance`
+++Stator (armature) resistance (<i>Rs</i>) (&gt;= 0). Typical value = 0,005.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:RotatingMachineDynamics.statorResistance`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/RotatingMachineDynamics.adoc[`RotatingMachineDynamics`]


|===

//[discrete]
[#SynchronousMachine]
=== `SynchronousMachine`
+++Synchronous machine to which synchronous machine dynamics model applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.SynchronousMachine`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachine.adoc[`SynchronousMachine`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TurbineGovernorDynamics]
=== `TurbineGovernorDynamics`
+++Turbine-governor model associated with this synchronous machine model. Multiplicity of greater than one is intended to support hydro units that have multiple turbines on one generator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineDynamics.TurbineGovernorDynamics`
| Cardinality
| 0..*
| Type
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| Inherited from
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]


|===

//[discrete]
[#x1d]
=== `x1d`
+++Direct-axis damper 1 winding leakage reactance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.x1d`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#x1q]
=== `x1q`
+++Quadrature-axis damper 1 winding leakage reactance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.x1q`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#x2q]
=== `x2q`
+++Quadrature-axis damper 2 winding leakage reactance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.x2q`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#xad]
=== `xad`
+++Direct-axis mutual reactance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.xad`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#xaq]
=== `xaq`
+++Quadrature-axis mutual reactance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.xaq`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#xf1d]
=== `xf1d`
+++Differential mutual (“Canay”) reactance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.xf1d`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#xfd]
=== `xfd`
+++Field winding leakage reactance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SynchronousMachineEquivalentCircuit.xfd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


